# freya

./: .gitignore  INSTALL_WINDOWS.md  LICENSE  README.fr.md  README.md  all_hashes.txt  architecture_documentation.html  commits.txt  freya.ps1  install.ps1  package-lock.json  pyproject.toml
.freya/tmp/: launch_freya_tui.ps1  run_freya_tui.cmd
architecture/: architecture_documentation.html
documentation/modules/: modules.md
documentation/versions/: 01-README-v0.0.1.md  02-README-v0.0.2.md  03-README-v0.0.3.md  04-README-v0.0.4.md  05-README-v0.0.5.md  06-README-v0.0.6.md  07-README-v0.0.7.md  08-README-v0.0.8.md  09-README-v0.0.9.md  10-README-v0.1.0.md  11-README-v0.1.1.md  12-README-v0.1.2.md  13-README-v0.1.3.md  14-README-v0.1.4.md  15-README-v0.1.5.md  16-README-v0.1.6.md  17-README-v0.1.7.md  18-README-v0.1.8.md  19-README-v0.2.0.md  20-README-v0.2.1.md  21-README-v0.2.2.md  22-README-v0.2.3.md  23-README-v0.2.4.md  24-README-v0.2.5.md  25-README-v0.2.6.md  26-README-v0.2.7.md  27-README-v0.2.8.md  28-README-v0.3.0.md  29-README-v0.3.1.md  30-README-v0.3.2.md  31-README-v0.3.3.md  32-README-v0.3.4.md  33-README-v0.3.5.md  34-README-v0.3.6.md  35-README-v0.3.7.md  36-README-v0.3.8.md  37-README-v0.4.0.md  38-README-v0.4.1.md  39-README-v0.4.2.md  40-README-v0.4.3.md  (+22 more)
localization/: README.fr.md  README.it.md
src/: bench_state.json
src/freya/: __init__.py  autopilot.py  bench_hybrid.py  benchmarkq.py  bmad_sync.py  cli.py  config.py  console.py  fsx.py  hybrid_router.py  ide.py  llamacpp_server.py  local_runtimes.py  loggingx.py  model_manager.py  monitoring.py  ollama_client.py  openai_compat_client.py  orchestrator.py  powershell.py  predict_consumption.py  tui.py  (+4 more)
src/freya.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  test_hybrid_routing.py
versions/: 01-README-v0.1.0.md  02-README-v0.2.0.md  03-README-v0.3.0.md  04-README-v0.4.0.md  05-README-v0.5.0.md  06-README-v0.6.0.md  07-README-v0.7.0.md  08-README-v0.8.0.md  09-README-v0.9.0.md  10-README-v0.10.0.md  11-README-v0.11.0.md  12-README-v0.12.0.md  13-README-v0.13.0.md  14-README-v0.14.0.md  15-README-v0.15.0.md  16-README-v0.16.0.md  17-README-v0.17.0.md  18-README-v0.18.0.md  19-README-v0.19.0.md  20-README-v0.20.0.md  21-README-v0.21.0.md  22-README-v0.18.0.0.md  23-README-v0.18.0.0.1.md  24-README-v0.22.0.md  25-README-v0.23.0.md  26-README-v0.24.0.md  27-README-v0.25.0.md  28-README-v0.0.6.md  29-README-v0.0.6.1.md  30-README-v0.0.6.2.md  31-README-v0.0.6.3.md  32-README-v0.0.7.md  33-README-v0.0.8.md  34-README-v0.0.9.md  35-README-v0.7.00.md  36-README-v0.7.01.md  37-README-v0.7.02.md  38-README-v0.7.03.md  39-README-v0.7.04.md  40-README-v0.7.05.md  (+47 more)
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+44 files in other folders)
